# varnam-windows

./: .gitignore  LICENSE.md  README.md  varnam-windows.iss
configure_languages/: Cargo.toml  languages_enabled_config.json
configure_languages/src/: main.rs
cpp/: VarnamWindows.sln  prebuild.ps1
cpp/SampleIME/: SampleIME.rc  SampleIME.vcxproj  SampleIME.vcxproj.filters
cpp/SampleIME/cbindgen/: govarnam.h
govarnam/: Makefile  c-shared.go  update-schemes.bat  windows-build.bat
govarnam-rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
govarnam-rust/assets/ml/: import.sh  install.sh
govarnam-rust/example/: Cargo.toml
govarnam-rust/example/src/: main.rs
govarnam-rust/src/: lib.rs  rvarnam.rs
govarnam-rust/src/bindings/: mod.rs  v_array.rs  varnam.rs
govarnam-rust/tests/: varnam_test.rs
govarnam-rust/varnam_init/src/: main.rs
govarnam-rust/vlf_import/: .gitignore  Cargo.toml
govarnam-rust/vlf_import/src/: main.rs
govarnam-rust/windows-langinput/: Cargo.toml
govarnam/govarnam/: constants.go  dictionary.go
govarnam/govarnamgo/: govarnamgo_ml_test.go  govarnamgo_test.go
govarnam/schemes/: .gitattributes  .gitignore  README.md  build_all_packs.sh  build_all_schemes.sh  build_scheme.sh  build_source_with_lfs_zip.sh  build_zips.sh  compile-scheme.rb  install.sh.in  install_all_schemes.sh  varnam.rb  varnamruby.rb
govarnam/schemes/ta/: README.md
lib/: libgovarnam.lib
rust/: languages_enabled_config.json
rust/composition_processor/: Cargo.toml
rust/ime/: Cargo.toml
vlf_import/: Cargo.toml
windows-langinput/src/: main.rs
(+40 files in other folders)
