[package]
name = "windows-langinput"
version = "0.1.0"
edition = "2021"

[dependencies]
globals = { path = "../../rust/globals" }

[dependencies.windows]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_UI_TextServices",
]